@@ -19,6 +19,11 @@
 	section of text overflows into an adjacent table cell
 	or off the right edge of the page.
 
+	<H3>Changes</H3>
+
+	<LI>The NEW SHEET page comment now breaks on N-up
+	boundaries when N is greater than 1.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>HTMLDOC tried to format tables with no rows or
