@@ -11,6 +11,11 @@ CHANGES IN HTMLDOC v1.8.23
 	  section of text overflows into an adjacent table cell
 	  or off the right edge of the page.
 
+    CHANGES
+
+	- The NEW SHEET page comment now breaks on N-up
+	  boundaries when N is greater than 1.
+
     BUG FIXES
 
 	- HTMLDOC tried to format tables with no rows or
